timing, fix test runner config